--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --site http://localhost:4321",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro build --site https://streamer-astro-jphjk.kinsta.page/",
     "preview": "astro preview",
     "astro": "astro"
   },
