Major overhaul - remove AstroSEO, upgrade Astro, meta for blog, pages, articles

--- a/.env.local
+++ b/.env.local
@@ -2,4 +2,4 @@
 PUBLIC_COSMIC_BUCKET_SLUG='rule-the-web'
 PUBLIC_COSMIC_READ_KEY='RL6IrhD17bbTXNJFnNht2KeR7u5E1Z6EE48MDyUqBJptYNww3v'
 
-SITE='http://localhost:4321'
+SITE='http://localhost:4321/'
